# 30-Day-SDET-Portfolio

./: README.md
week-1-api-security/: README.md
week-1-api-security/day-01-pact-contract-testing/: README.md  docker-compose.yml  pyproject.toml
week-1-api-security/day-01-pact-contract-testing/consumer/: __init__.py  client.py
week-1-api-security/day-01-pact-contract-testing/consumer/tests/: conftest.py  test_user_contract_v1.py  test_user_contract_v2.py
week-1-api-security/day-01-pact-contract-testing/provider/: app.py  provider_states.py
week-1-api-security/day-01-pact-contract-testing/provider/tests/: test_provider_verification.py
week-1-api-security/day-01-pact-contract-testing/scripts/: can_i_deploy.py  publish_pacts.py
week-1-api-security/day-02-jwt-oauth-security-scanner/: README.md  pyproject.toml
week-1-api-security/day-02-jwt-oauth-security-scanner/scanner/: __init__.py  jwt_decoder.py  scanner.py
week-1-api-security/day-02-jwt-oauth-security-scanner/scanner/probes/: algorithm_probe.py  base.py  expiry_probe.py  replay_probe.py  scope_probe.py
week-1-api-security/day-02-jwt-oauth-security-scanner/scanner/tests/: test_scanner.py
week-1-api-security/day-03-openapi-fuzz-tester/: README.md  openapi.yaml  pyproject.toml
week-1-api-security/day-03-openapi-fuzz-tester/fuzzer/: __init__.py  engine.py  request_builder.py  response_analyzer.py  sample_target.py  spec_parser.py
week-1-api-security/day-03-openapi-fuzz-tester/fuzzer/mutators/: payload_mutators.py
week-1-api-security/day-03-openapi-fuzz-tester/fuzzer/tests/: test_fuzzer.py
week-1-api-security/day-04-owasp-top10-probe-suite/: README.md  pyproject.toml
week-1-api-security/day-04-owasp-top10-probe-suite/probe_suite/: __init__.py  scanner.py
week-1-api-security/day-04-owasp-top10-probe-suite/probe_suite/probes/: a01_broken_access_control.py  a02_a05_crypto_misconfig.py  a03_a07_injection_auth.py  a10_ssrf.py  base.py
week-1-api-security/day-04-owasp-top10-probe-suite/probe_suite/targets/: vulnerable_app.py
week-1-api-security/day-04-owasp-top10-probe-suite/probe_suite/tests/: test_owasp_probes.py
week-1-api-security/day-05-graphql-attack-detector/: README.md  pyproject.toml
week-1-api-security/day-05-graphql-attack-detector/gql_scanner/: __init__.py  gql_client.py  scanner.py
week-1-api-security/day-05-graphql-attack-detector/gql_scanner/probes/: base.py  batching_probe.py  depth_probe.py  field_injection_probe.py  introspection_probe.py
week-1-api-security/day-05-graphql-attack-detector/gql_scanner/targets/: vulnerable_gql.py
week-1-api-security/day-05-graphql-attack-detector/gql_scanner/tests/: test_gql_scanner.py
week-1-api-security/day-06-api-regression-harness/: README.md  pyproject.toml
week-1-api-security/day-06-api-regression-harness/regression/: __init__.py  asserter.py  fixture_loader.py  runner.py
week-1-api-security/day-06-api-regression-harness/regression/fixtures/: users_api.yaml
week-1-api-security/day-06-api-regression-harness/regression/reporters/: allure_reporter.py  html_reporter.py
week-1-api-security/day-06-api-regression-harness/regression/tests/: test_regression.py
week-1-api-security/day-07-api-chaos-layer/: README.md  docker-compose.yml  pyproject.toml
week-1-api-security/day-07-api-chaos-layer/chaos/: __init__.py  engine.py  toxiproxy_client.py
week-1-api-security/day-07-api-chaos-layer/chaos/probes/: resilience_probes.py
week-1-api-security/day-07-api-chaos-layer/chaos/tests/: test_chaos.py
