[tool.poetry]
name = "day-02-jwt-oauth-security-scanner"
version = "1.0.0"
description = "JWT / OAuth 2.0 security scanner probing token expiry, scope overflow, replay attacks, and algorithm confusion"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27"
pyjwt = {extras = ["crypto"], version = "^2.8"}
cryptography = "^42.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1"
pytest-cov = "^5.0"

[tool.pytest.ini_options]
testpaths = ["scanner/tests"]
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["scanner"]
omit = ["*/tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
