[tool.poetry]
name = "day-04-owasp-top10-probe-suite"
version = "1.0.0"
description = "Automated OWASP Top-10 probe suite — 6 probe classes, HTML/JSON reports, CI gate"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python   = "^3.11"
httpx    = "^0.27"
fastapi  = "^0.110"
uvicorn  = {extras = ["standard"], version = "^0.27"}
pydantic = "^2.6"

[tool.poetry.dev-dependencies]
pytest      = "^8.1"
pytest-cov  = "^5.0"

[tool.pytest.ini_options]
testpaths  = ["probe_suite/tests"]
log_cli    = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["probe_suite"]
omit   = ["*/tests/*", "*/targets/*"]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
