[tool.poetry]
name = "day-07-api-chaos-layer"
version = "1.0.0"
description = "API chaos layer — Toxiproxy-based latency injection, TCP reset, packet loss, bandwidth throttling, resilience scorecard"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python  = "^3.11"
httpx   = "^0.27"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.27"}

[tool.poetry.dev-dependencies]
pytest     = "^8.1"
pytest-cov = "^5.0"

[tool.pytest.ini_options]
testpaths     = ["chaos/tests"]
log_cli       = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["chaos"]
omit   = ["*/tests/*"]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
